# ushanka

./: .gitignore  .readthedocs.yml  Pipfile  README.md  example.yml  pyproject.toml  setup.py
archivematica/: __init__.py  archivematica.py  mets.py
archivesspace/: __init__.py  archivesspace.py
aspace_models/: __init__.py  models.py
docs/: requirements.in  requirements.txt
docs/source/: conf.py  index.rst
docs/source/contents/: fedora.rst
fedora/: __init__.py  fedora.py  metadata.py  mets.py
temp/: POLICY.xml
