[tool.poetry]
name = "ushanka"
version = "0.1.0"
description = ""
authors = ["Mark Baggett <mbagget1@utk.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
black = "^23.1.0"
sphinxcontrib-mermaid = "^0.8.1"
lxml = "^4.9.2"
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"
humanize = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
